# haskell-sqlite-cache

./: CHANGELOG.md  in-memory-sqlite.cabal
app/: Main.hs
app/Storage/Queries/: Artist.hs  DBQueries.hs
app/Storage/Types/: Address.hs  Album.hs  Artist.hs  Customer.hs  DB.hs  Employee.hs  Genre.hs  InMemDb.hs  Invoice.hs  InvoiceLine.hs  MediaType.hs  Playlist.hs  PlaylistTrack.hs  Track.hs
resources/: chinook.db  chinook.sql
